--- a/docs/source/Stereo-seq_MOBS1_Tutorial.ipynb
+++ b/docs/source/Stereo-seq_MOBS1_Tutorial.ipynb
@@ -89,22 +89,7 @@
    "id": "615bcbc5",
    "metadata": {},
    "source": [
-    "You can uncomment and execute the following command to download the Stereo-seq MOBS1 dataset in AnnData format."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "001aa3b8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-10-11T14:54:52.371051Z",
-     "start_time": "2022-10-11T14:54:52.369126Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# !wget https://health.tsinghua.edu.cn/software/PAST/data/Stereo-seq_MOBS1.h5ad"
+    "The data used in this tutorial is available at [TsinghuaCloudDisk](https://cloud.tsinghua.edu.cn/d/9ab272a99ffb4104a37d/)."
    ]
   },
   {
